--- a/documentation.yaml
+++ b/documentation.yaml
@@ -1,12 +1,13 @@
-swagger: "2.0"
+openapi: "3.0.0"
 info:
+  version: 1.0.0
   description: "Cette API permet de gérer des colocations en fonction des tâches à réaliser par chacun des membres."
-  version: "1.0.0"
   title: "Colocation API"
   contact:
     email: "lea.banquart@uha.fr"
     
-host: "localhost:8080"
+servers:
+  - url: "http://localhost:8080/"
 tags:
 - name: "Colocations"
   description: "Contrôle des colocations"
@@ -14,8 +15,6 @@ tags:
   description: "Contrôle des utilisateurs"
 - name: "Tasks"
   description: "Contrôle des tâches"
-schemes:
-- "http"
 
 paths:
   /colocations/add:
@@ -26,10 +25,8 @@ paths:
       description: ""
       operationId: "addColocation"
       responses:
-        200:
-          description: "ID de la colocation"          
-          schema:
-            $ref : "#/definitions/AddColocationSuccess"
+        '200':
+          description: "Retourne l'ID de la colocation" 
   /colocations/addUser:
     post:
       tags:
@@ -38,25 +35,25 @@ paths:
       description: ""
       operationId: "addOneUserInColocation"
       parameters:
-      - name: "ID"
-        in: "query"
-        description: "ID de la colocation"
-        required: true
-        type: "integer"
-      - name: "userID"
-        in: "query"
-        description: "ID de l'habitant à ajouter"
-        required: true
-        type: "integer"
+        - name: "ID"
+          in: "query"
+          description: "ID de la colocation"
+          required: true
+          allowReserved: true
+          schema:
+            type: "integer"
+        - name: "userID"
+          in: "query"
+          description: "ID de l'habitant à ajouter"
+          required: true
+          allowReserved: true
+          schema:
+            type: "integer"
       responses:
-        200:
-          description: "La colocation"          
-          schema:
-            $ref : "#/definitions/ColocationSuccess"
-        404:
+        '200':
+          description: "Retourne la colocation"          
+        '404':
           description: "L'utilisateur ou la colocation est introuvable, ou il existe déjà cet utilisateur dans la colocation."
-          schema:
-            $ref : "#/definitions/RecordAlreadyExistsException"
   /colocations/removeUser:
     delete:
       tags:
@@ -65,25 +62,25 @@ paths:
       description: ""
       operationId: "removeOneUserInColocation"
       parameters:
-      - name: "ID"
-        in: "query"
-        description: "ID de la colocation"
-        required: true
-        type: "integer"
-      - name: "userID"
-        in: "query"
-        description: "ID de l'habitant à supprimer"
-        required: true
-        type: "integer"
+        - name: "ID"
+          in: "query"
+          description: "ID de la colocation"
+          required: true
+          allowReserved: true
+          schema:
+            type: "integer"
+        - name: "userID"
+          in: "query"
+          description: "ID de l'habitant à supprimer"
+          required: true
+          allowReserved: true
+          schema:
+            type: "integer"
       responses:
-        200:
-          description: "successful operation"
-          schema:
-            $ref : "#/definitions/ColocationSuccess"
-        404:
+        '200':
+          description: "Retourne la colocation"
+        '404':
           description: "L'utilisateur ou la colocation est introuvable, ou il existe déjà cet utilisateur dans la colocation."
-          schema:
-            $ref : "#/definitions/RecordAlreadyExistsException"
   /colocations/addTask:
     post:
       tags:
@@ -92,86 +89,73 @@ paths:
       description: ""
       operationId: "addOneTaskInColocation"
       parameters:
-      - name: "ID"
-        in: "query"
-        description: "ID de la colocation"
-        required: true
-        type: "integer"
-      - name: "description"
-        in: "query"
-        description: "Description de la tâche"
-        required: true
-        type: "string"
-      - name: "points"
-        in: "query"
-        description: "Nombre de points de la tâche"
-        required: true
-        type: "integer"
-      - name: "askerId"
-        in: "query"
-        description: "ID du demandeur de la tâche"
-        required: true
-        type: "integer"
+        - name: "ID"
+          in: "query"
+          description: "ID de la colocation"
+          required: true
+          allowReserved: true
+          schema:
+            type: "integer"
+        - name: "description"
+          in: "query"
+          description: "Description de la tâche"
+          required: true
+          allowReserved: true
+          schema:
+            type: "string"
+        - name: "points"
+          in: "query"
+          description: "Nombre de points de la tâche"
+          required: true
+          allowReserved: true
+          schema:
+            type: "integer"
+        - name: "askerId"
+          in: "query"
+          description: "ID du demandeur de la tâche"
+          required: true
+          allowReserved: true
+          schema:
+            type: "integer"
       responses:
-        200:
-          description: "La colocation"          
-          schema:
-            $ref : "#/definitions/ColocationSuccess"
-        404:
+        '200':
+          description: "Retourne la colocation"          
+        '404':
           description: "L'utilisateur ou la colocation est introuvable, ou il existe déjà cet utilisateur dans la colocation."
-          schema:
-            $ref : "#/definitions/RecordAlreadyExistsException"
   /colocations/taskDone:
-    delete:
+    post:
       tags:
       - "Colocations"
       summary: "Met une tâche 'faite'"
       description: ""
       operationId: "setOneTaskDoneInColocation"
       parameters:
-      - name: "ID"
-        in: "query"
-        description: "ID de la colocation"
-        required: true
-        type: "integer"
-      - name: "taskID"
-        in: "query"
-        description: "ID de la tâche à modifier"
-        required: true
-        type: "integer"
-      - name: "donerID"
-        in: "query"
-        description: "ID de la personne ayant fait la tâche"
-        required: true
-        type: "integer"
-      responses:
-        200:
-          description: "successful operation"
+        - name: "ID"
+          in: "query"
+          description: "ID de la colocation"
+          required: true
+          allowReserved: true
           schema:
-            $ref : "#/definitions/ColocationSuccess"
-        404:
+            type: "integer"
+        - name: "taskID"
+          in: "query"
+          description: "ID de la tâche à modifier"
+          required: true
+          allowReserved: true
+          schema:
+            type: "integer"
+        - name: "donerID"
+          in: "query"
+          description: "ID de la personne ayant fait la tâche"
+          required: true
+          allowReserved: true
+          schema:
+            type: "integer"
+      responses:
+        '200':
+          description: "Retourne 'successful operation'"
+        '404':
           description: "L'utilisateur ou la colocation est introuvable, ou il existe déjà cet utilisateur dans la colocation."
-          schema:
-            $ref : "#/definitions/RecordAlreadyExistsException"
-  /colocations/update:
-    post:
-      tags:
-      - "Colocations"
-      summary: "Mettre une colocation entière à jour"
-      description: ""
-      operationId: "updateColocation"
-      parameters:
-      - name: "Colocation"
-        in: "body"
-        description: "Colocation à mettre à jour"
-        required: true
-        schema:
-          $ref: "#/definitions/Colocation"
-      responses:
-        200:
-          description: "La colocation éditée"
-          schema:
-            $ref: "#/definitions/UpdateColocationSuccess"
   /colocations/delete:
     delete:
       tags:
@@ -180,20 +164,18 @@ paths:
       description: ""
       operationId: "deleteColocation"
       parameters:
-      - name: "ID"
-        in: "query"
-        description: "ID de la colocation à supprimer"
-        required: true
-        type: "integer"
+        - name: "ID"
+          in: "query"
+          description: "ID de la colocation à supprimer"
+          required: true
+          allowReserved: true
+          schema:
+            type: "integer"
       responses:
-        200:
-          description : "La colocation supprimée"
-          schema:
-            $ref: "#/definitions/UpdateColocationSuccess"
-        404:
+        '200':
+          description : "Retourne la colocation supprimée"
+        '404':
           description: "La colocation est introuvable."
-          schema:
-            $ref : "#/definitions/RecordAlreadyExistsException"
   /colocations/all:
     get:
       tags:
@@ -202,10 +184,8 @@ paths:
       description: ""
       operationId: "getAllColocations"
       responses:
-        200:
+        '200':
           description: "Liste de toutes les colocations"
-          schema:
-            $ref: "#/definitions/GetAllColocations"
           
   /users/add:
     post:
@@ -215,40 +195,23 @@ paths:
       description: ""
       operationId: "addUser"
       parameters:
-      - name: "User"
-        in: "body"
-        description: "L'utilisateur à ajouter"
-        required: true
-        schema:
-          $ref: "#/definitions/User"
+        - name: "Name"
+          in: "query"
+          description: "Nom de l'utilisateur"
+          required: true
+          allowReserved: true
+          schema:
+            type : "string"
+        - name: "Points"
+          in: "query"
+          description: "Points de l'utilisateur"
+          required: true
+          allowReserved: true
+          schema:
+            type : "integer"
       responses:
-        200:
-          description: "ID de l'utilisateur'"
-          schema:
-            $ref: "#/definitions/UserSuccess"
-  /users/update:
-    post:
-      tags:
-      - "Users"
-      summary: "Mettre un utilisateur à jour"
-      description: ""
-      operationId: "updateUser"
-      parameters:
-      - name: "User"
-        in: "body"
-        description: "L'utilisateur à mettre à jour"
-        required: true
-        schema:
-          $ref: "#/definitions/User"
-      responses:
-        200:
-          description: "L'utilisateur mis à jour"
-          schema:
-            $ref: "#/definitions/User"
-        404:
-          description: "L'utilisateur est introuvable."
-          schema:
-            $ref : "#/definitions/RecordAlreadyExistsException"
+        '200':
+          description: "Retourne l'ID de l'utilisateur'"
   /users/delete:
     delete:
       tags:
@@ -257,18 +220,18 @@ paths:
       description: ""
       operationId: "deleteUser"
       parameters:
-      - name: "ID"
-        in: "query"
-        description: "ID de l'utilisateur à supprimer"
-        required: true
-        type: "integer"
-      responses:
-        200:
-          description: "Renvoie seulement 'Deleted'"
-        404:
-          description: "L'utilisateur est introuvable."
+        - name: "ID"
+          in: "query"
+          description: "ID de l'utilisateur à supprimer"
+          required: true
+          allowReserved: true
           schema:
-            $ref : "#/definitions/RecordAlreadyExistsException"
+            type: "integer"
+      responses:
+        '200':
+          description: "Retourne 'Deleted'"
+        '404':
+          description: "L'utilisateur est introuvable."
   /users/all:
     get:
       tags:
@@ -277,53 +240,9 @@ paths:
       description: ""
       operationId: "getAllUsers"
       responses:
-        200:
-          description: "La liste de tous les utilisateurs"
-          schema:
-            $ref: "#/definitions/GetAllUsers"
+        '200':
+          description: "Retourne la liste de tous les utilisateurs"
   
-  /tasks/add:
-    post:
-      tags:
-      - "Tasks"
-      summary: "Ajouter une tâche"
-      description: ""
-      operationId: "addTask"
-      parameters:
-      - name: "Task"
-        in: "body"
-        description: "Tâche à ajouter"
-        required: true
-        schema:
-          $ref: "#/definitions/Task"
-      responses:
-        200:
-          description: "ID de la tâche"
-          schema:
-            $ref: "#/definitions/TaskSuccess"
-  /tasks/update:
-    post:
-      tags:
-      - "Tasks"
-      summary: "Mettre une tâche à jour"
-      description: ""
-      operationId: "updateTask"
-      parameters:
-      - name: "Task"
-        in: "body"
-        description: "La tâche à mettre à jour"
-        required: true
-        schema:
-          $ref: "#/definitions/Task"
-      responses:
-        200:
-          description: "La tâche mise à jour"
-          schema:
-            $ref: "#/definitions/Task"
-        404:
-          description: "La tâche est introuvable."
-          schema:
-            $ref : "#/definitions/RecordAlreadyExistsException"
   /tasks/delete:
     delete:
       tags:
@@ -332,18 +251,18 @@ paths:
       description: ""
       operationId: "deleteTask"
       parameters:
-      - name: "ID"
-        in: "query"
-        description: "ID de la tâche à supprimer"
-        required: true
-        type: "integer"
-      responses:
-        200:
-          description: "Renvoie seulement 'Deleted'"
-        404:
-          description: "La tâche est introuvable."
+        - name: "ID"
+          in: "query"
+          description: "ID de la tâche à supprimer"
+          required: true
+          allowReserved: true
           schema:
-            $ref : "#/definitions/RecordAlreadyExistsException"
+            type: "integer"
+      responses:
+        '200':
+          description: "Retourne 'Deleted'"
+        '404':
+          description: "La tâche est introuvable."
   /tasks/all:
     get:
       tags:
@@ -352,102 +271,10 @@ paths:
       description: ""
       operationId: "getAllTasks"
       responses:
-        200:
+        '200':
           description: "La liste de toutes les tâches"
-          schema:
-            $ref: "#/definitions/GetAllTasks"
     
   
-definitions:
-  Colocation:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      users:
-        type: "array"
-        items:
-          $ref: "#/definitions/User"
-        description: "Liste des habitants de la colocation"
-  User:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      name:
-        type: "string"
-        description: "Nom de l'utilisateur"
-      points:
-        type: "integer"
-        description: "Nombre de points de l'utilisateur"
-  Task:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      description:
-        type: "string"
-        description: "Description de la tâche à faire"
-      points:
-        type: "integer"
-        description: "Nombre de points de la tâche"
-      isDone:
-        type: "boolean"
-        description: "Booléen permettant de savoir si une tâche est faite ou pas"
-  RecordAlreadyExistsException:
-    type: "object"
-    required: [message]
-    properties:
-      message:
-        type: string
-      errors:
-        type: object
-  ColocationSuccess:
-    type: "object"
-    properties:
-      colocation:
-        $ref: "#/definitions/Colocation"
-  UserSuccess:
-    type: "object"
-    required: [id]
-    properties:
-      id:
-        type: integer
-  TaskSuccess:
-    type: "object"
-    required: [id]
-    properties:
-      id:
-        type: integer
-  AddColocationSuccess:
-    type: "object"
-    required: [id]
-    properties:
-      id:
-        type: integer
-  UpdateColocationSuccess:
-    type: "object"
-    properties:
-      colocation:
-        $ref: "#/definitions/Colocation"
-  GetAllColocations:
-    type: "array"
-    items:
-        $ref: "#/definitions/Colocation"
-  GetAllUsers:
-    type: "array"
-    items:
-        $ref: "#/definitions/User"
-  GetAllTasks:
-    type: "array"
-    items:
-        $ref: "#/definitions/Task"
-  
-  
-  
-  
+
   
   
